--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="ParseAppKey">qLDDiNkDY2lDYxj3eMFkXVSqehoCwYwlxlAxSEOp</string>
+    <string name="ParseClientKey">sxWYihtMx4ctd5on4kOmfDc3GDBdm5OWYiMcjJ3p</string>
 </resources>
