InventoryStatus is done! Can be animated to look cooler!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="ParseAppKey">qLDDiNkDY2lDYxj3eMFkXVSqehoCwYwlxlAxSEOp</string>
     <string name="ParseClientKey">sxWYihtMx4ctd5on4kOmfDc3GDBdm5OWYiMcjJ3p</string>
+    <string name="ParseObjectID">Qvd9aQNSO0</string>
 </resources>
