--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="ParseAppKey">qLDDiNkDY2lDYxj3eMFkXVSqehoCwYwlxlAxSEOp</string>
     <string name="ParseClientKey">sxWYihtMx4ctd5on4kOmfDc3GDBdm5OWYiMcjJ3p</string>
-    <string name="ParseObjectID">Qvd9aQNSO0</string>
+    <string name="ParseObjectID_InventoryStatus">Qvd9aQNSO0</string>
+    <string name="ParseObjectID_UnknownImageJSONArray">QjestMNLzB</string>
+    <string name="ParseObjectID_ConfirmedImages">uXFlSqSVMu</string>
 </resources>
